# ChangeLog for dev-ruby/shoulda
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/shoulda/ChangeLog,v 1.22 2013/12/24 12:41:23 ago Exp $

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> shoulda-2.11.3-r1.ebuild:
  Stable for x86, wrt bug #495114

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> shoulda-2.11.3-r1.ebuild:
  amd64 stable, bug #495114

*shoulda-2.11.3-r1 (05 Nov 2013)

  05 Nov 2013; Hans de Graaff <graaff@gentoo.org> +shoulda-2.11.3-r1.ebuild:
  EAPI 5. Add ruby20.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> shoulda-2.11.3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> shoulda-2.11.3.ebuild:
  Stable for x86, wrt bug #448672

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> shoulda-2.11.3.ebuild:
  Stable for amd64, wrt bug #448672

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> -shoulda-2.10.3.ebuild,
  -shoulda-2.11.2.ebuild:
  Cleanup.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> shoulda-2.11.3.ebuild:
  Drop ia64/sparc keywords

  05 Dec 2011; Naohiro Aota <naota@gentoo.org> shoulda-2.11.3.ebuild:
  Add ~x86-fbsd.

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> shoulda-2.11.3.ebuild:
  Add ~ia64/~sparc wrt #351835

*shoulda-2.11.3 (29 May 2011)

  29 May 2011; Hans de Graaff <graaff@gentoo.org> +shoulda-2.11.3.ebuild:
  Version bump.

*shoulda-2.11.2 (18 Feb 2011)

  18 Feb 2011; Hans de Graaff <graaff@gentoo.org> +shoulda-2.11.2.ebuild:
  Version bump.

  27 Dec 2010; Fabian Groffen <grobian@gentoo.org> shoulda-2.10.3.ebuild:
  Added Prefix keywords

  29 Sep 2010; Brent Baude <ranger@gentoo.org> shoulda-2.10.3.ebuild:
  Marking shoulda-2.10.3 ~ppc64 for bug 321283

  31 Aug 2010; Alex Legler <a3li@gentoo.org> shoulda-2.10.3.ebuild:
  Add REE 1.8 support.

  28 May 2010; Joseph Jezak <josejx@gentoo.org> shoulda-2.10.3.ebuild:
  Marked ~ppc for bug #302560.
