@@ -1,12 +1,13 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/shoulda/shoulda-2.11.3.ebuild,v 1.7 2013/01/15 07:08:54 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/shoulda/shoulda-2.11.3-r2.ebuild,v 1.1 2014/01/10 11:42:48 graaff Exp $
 
-EAPI=2
+EAPI=5
 
-USE_RUBY="ruby18 ree18 ruby19 jruby"
+USE_RUBY="ruby18 ruby19 ruby20 ruby21 jruby"
 
-RUBY_FAKEGEM_DOCDIR="doc"
+# Use rdoc recipe to avoid obsolete Rakefile
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
 RUBY_FAKEGEM_EXTRADOC="CONTRIBUTION_GUIDELINES.rdoc README.rdoc"
 
 inherit ruby-fakegem
@@ -14,11 +15,11 @@ inherit ruby-fakegem
 DESCRIPTION="Making tests easy on the fingers and eyes"
 HOMEPAGE="http://thoughtbot.com/projects/shoulda"
 SRC_URI="https://github.com/thoughtbot/${PN}/tarball/v${PV} -> ${P}.tar.gz"
-S="${WORKDIR}/thoughtbot-${PN}-*"
+RUBY_S="thoughtbot-${PN}-*"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~ppc ~ppc64 x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE=""
 
 # tests seem to be quite broken :( They require working version of
