@@ -1,6 +1,14 @@
 # ChangeLog for dev-ruby/shoulda
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/shoulda/ChangeLog,v 1.22 2013/12/24 12:41:23 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/shoulda/ChangeLog,v 1.24 2014/01/10 11:42:49 graaff Exp $
+
+*shoulda-2.11.3-r2 (10 Jan 2014)
+
+  10 Jan 2014; Hans de Graaff <graaff@gentoo.org> +shoulda-2.11.3-r2.ebuild:
+  Add ruby21. Avoid using Rakefile with obsolete code.
+
+  10 Jan 2014; Hans de Graaff <graaff@gentoo.org> -shoulda-2.11.3.ebuild:
+  Cleanup.
 
   24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> shoulda-2.11.3-r1.ebuild:
   Stable for x86, wrt bug #495114
